--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nest-muraly-app",
-  "version": "1.3.0",
+  "name": "nestjs-muraly-app",
+  "version": "1.4.0",
   "private": false,
   "bin": "./bin/cli.js",
   "dependencies": {
